# StudyStarter

./: Cargo.toml  README.md
src/: directory_construction.rs  file_checks.rs  file_parse.rs  lib.rs  main.rs  repo.rs
unit_manifests/SIT192/: README.md  manifest.txt
unit_manifests/SIT202/: README.md  manifest.txt
unit_manifests/SIT221/: README.md  manifest.txt
unit_manifests/SIT282/: README.md  manifest.txt
unit_manifests/SIT384/: README.md
