[package]
name = "studystarter"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["GhostUponAvon"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.11"
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["full"] }


[profile.opt-size]
debug = false
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
